Use nowrap attribute for company name

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -12,8 +12,7 @@
     <table>
         <tr>
             <th><img src="../images/gray-circle.png" width="48"></th>
-            <th>Company</th>
-            <th>Name</th>
+            <th nowrap>Company Name</th>
             <th width="100%"></th>
             <th><a href="html/cart.html">Cart</a></th>
             <th><a href="html/login.html">Login</a></th>
