--- a/storefront-site/html/products/product5.html
+++ b/storefront-site/html/products/product5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gloves</title>
+    <title>Soap</title>
 </head>
 
 <body topmargin="20">
@@ -23,8 +23,8 @@
     <div>
         <table>
             <tr>
-                <td rowspan="5"><img src="../../images/product3.png" width="256"></td>
-                <td>Gloves</td>
+                <td rowspan="5"><img src="../../images/product5.png" width="256"></td>
+                <td>Soap</td>
                 <td align="right" width="25%">
                     <font color="green"><b>In Stock.</b></font>
                 </td>
@@ -73,8 +73,8 @@
         <tr>
             <td><a href="./product1.html"><img src="../../images/product1.png" width="128"></a></td>
             <td><a href="./product2.html"><img src="../../images/product2.png" width="128"></a></td>
+            <td><a href="./product3.html"><img src="../../images/product3.png" width="128"></a></td>
             <td><a href="./product4.html"><img src="../../images/product4.png" width="128"></a></td>
-            <td><a href="./product5.html"><img src="../../images/product5.png" width="128"></a></td>
         </tr>
     </table>
     <br>
