Update cart images

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -44,8 +44,8 @@
     <div>
         <table>
             <tr>
-                <td rowspan="6"><img src="../images/gray-square.png" width="256"></td>
-                <td>Product Name</td>
+                <td rowspan="6"><a href="products/product1.html"><img src="../images/product1.png" width="256"></a></td>
+                <td>Mask</td>
             </tr>
             <tr>
                 <td>Product Description</td>
@@ -77,8 +77,8 @@
     <div>
         <table>
             <tr>
-                <td rowspan="6"><img src="../images/gray-square.png" width="256"></td>
-                <td>Product Name</td>
+                <td rowspan="6"><a href="products/product2.html"><img src="../images/product2.png" width="256"></a></td>
+                <td>Hand Sanitizer</td>
             </tr>
             <tr>
                 <td>Product Description</td>
