Fix broken references

--- a/storefront-site/html/products/product2.html
+++ b/storefront-site/html/products/product2.html
@@ -11,7 +11,7 @@
 <body topmargin="20">
     <table>
         <tr>
-            <th><img src="../../images/gray-circle.png" width="48"></th>
+            <th><img src="images/gray-circle.png" width="48"></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
             <th><a href="html/cart.html">Cart</a></th>
@@ -23,7 +23,7 @@
     <div>
         <table>
             <tr>
-                <td rowspan="5"><img src="../../images/product2.png" width="256"></td>
+                <td rowspan="5"><img src="images/product2.png" width="256"></td>
                 <td>Hand Sanitizer</td>
                 <td align="right" width="25%">
                     <font color="green"><b>In Stock.</b></font>
@@ -71,10 +71,10 @@
     <h2>Other Products:</h2>
     <table>
         <tr>
-            <td><a href="./product1.html"><img src="../../images/product1.png" width="128"></a></td>
-            <td><a href="./product3.html"><img src="../../images/product3.png" width="128"></a></td>
-            <td><a href="./product4.html"><img src="../../images/product4.png" width="128"></a></td>
-            <td><a href="./product5.html"><img src="../../images/product5.png" width="128"></a></td>
+            <td><a href="html/products/product1.html"><img src="images/product1.png" width="128"></a></td>
+            <td><a href="html/products/product3.html"><img src="images/product3.png" width="128"></a></td>
+            <td><a href="html/products/product4.html"><img src="images/product4.png" width="128"></a></td>
+            <td><a href="html/products/product5.html"><img src="images/product5.png" width="128"></a></td>
         </tr>
     </table>
     <br>
