--- a/storefront-site/html/user-preferences.html
+++ b/storefront-site/html/user-preferences.html
@@ -11,7 +11,7 @@
 <body topmargin="20">
     <table>
         <tr>
-            <th><img src="../images/gray-circle.png" width="48"></th>
+            <th><img src="images/gray-circle.png" width="48"></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
             <th><a href="html/cart.html">Cart</a></th>
