--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -11,7 +11,7 @@
 <body topmargin="20">
     <table>
         <tr>
-            <th><img src="../images/gray-circle.png" width="48"></th>
+            <th><img src="images/gray-circle.png" width="48"></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
             <th><a href="html/cart.html">Cart</a></th>
@@ -44,7 +44,7 @@
     <div>
         <table>
             <tr>
-                <td rowspan="6"><a href="products/product1.html"><img src="../images/product1.png" width="256"></a></td>
+                <td rowspan="6"><a href="html/products/product1.html"><img src="images/product1.png" width="256"></a></td>
                 <td>Mask</td>
             </tr>
             <tr>
@@ -77,7 +77,7 @@
     <div>
         <table>
             <tr>
-                <td rowspan="6"><a href="products/product2.html"><img src="../images/product2.png" width="256"></a></td>
+                <td rowspan="6"><a href="html/products/product2.html"><img src="images/product2.png" width="256"></a></td>
                 <td>Hand Sanitizer</td>
             </tr>
             <tr>
