--- a/storefront-site/html/products/product3.html
+++ b/storefront-site/html/products/product3.html
@@ -11,11 +11,11 @@
 <body topmargin="20">
     <table>
         <tr>
-            <th><img src="images/gray-circle.png" width="48"></th>
+            <th><img src="/images/gray-circle.png" width="48"></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
-            <th><a href="html/cart.html">Cart</a></th>
-            <th><a href="html/login.html">Login</a></th>
+            <th><a href="/html/cart.html">Cart</a></th>
+            <th><a href="/html/login.html">Login</a></th>
         </tr>
     </table>
     <br>
@@ -23,7 +23,7 @@
     <div>
         <table>
             <tr>
-                <td rowspan="5"><img src="images/product3.png" width="256"></td>
+                <td rowspan="5"><img src="/images/product3.png" width="256"></td>
                 <td>Gloves</td>
                 <td align="right" width="25%">
                     <font color="green"><b>In Stock.</b></font>
@@ -71,10 +71,10 @@
     <h2>Other Products:</h2>
     <table>
         <tr>
-            <td><a href="html/products/product1.html"><img src="images/product1.png" width="128"></a></td>
-            <td><a href="html/products/product2.html"><img src="images/product2.png" width="128"></a></td>
-            <td><a href="html/products/product4.html"><img src="images/product4.png" width="128"></a></td>
-            <td><a href="html/products/product5.html"><img src="images/product5.png" width="128"></a></td>
+            <td><a href="/html/products/product1.html"><img src="/images/product1.png" width="128"></a></td>
+            <td><a href="/html/products/product2.html"><img src="/images/product2.png" width="128"></a></td>
+            <td><a href="/html/products/product4.html"><img src="/images/product4.png" width="128"></a></td>
+            <td><a href="/html/products/product5.html"><img src="/images/product5.png" width="128"></a></td>
         </tr>
     </table>
     <br>
@@ -83,8 +83,8 @@
     <footer>
         <table>
             <tr>
-                <td><a href="html/aboutus.html">About us</a></td>
-                <td><a href="html/faq.html">FAQ's</a></td>
+                <td><a href="/html/aboutus.html">About us</a></td>
+                <td><a href="/html/faq.html">FAQ's</a></td>
             </tr>
             <tr>
                 <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
