--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -11,18 +11,18 @@
 <body topmargin="20">
     <table>
         <tr>
-            <th><img src="images/gray-circle.png" width="48"></th>
+            <th><img src="/images/gray-circle.png" width="48"></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
-            <th><a href="html/cart.html">Cart</a></th>
-            <th><a href="html/login.html">Login</a></th>
+            <th><a href="/html/cart.html">Cart</a></th>
+            <th><a href="/html/login.html">Login</a></th>
         </tr>
     </table>
     <footer>
         <table>
             <tr>
-                <td><a href="html/aboutus.html">About us</a></td>
-                <td><a href="html/faq.html">FAQ's</a></td>
+                <td><a href="/html/aboutus.html">About us</a></td>
+                <td><a href="/html/faq.html">FAQ's</a></td>
             </tr>
             <tr>
                 <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
