--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -11,7 +11,7 @@
 <body topmargin="20">
     <table>
         <tr>
-            <th><img src="/images/gray-circle.png" width="48"></th>
+            <th><a href="/index.html"><img src="/images/gray-circle.png" width="48"></a></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
             <th><a href="/html/cart.html">Cart</a></th>
