--- a/storefront-site/html/products/product5.html
+++ b/storefront-site/html/products/product5.html
@@ -14,7 +14,7 @@
             <th><a href="/index.html"><img src="/images/gray-circle.png" width="48"></a></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
-            <th><a href="/html/cart.html">Cart</a></th>
+            <th nowrap><a href="/html/cart.html">🛒 Cart</a></th>
             <th><a href="/html/login.html">Login</a></th>
         </tr>
     </table>
@@ -47,11 +47,11 @@
             <tr>
                 <td>Price: <font color="brown">$4.99</font>
                 </td>
-                <td align="right"><button type="button">Add to Cart</button></td>
+                <td align="right"><button type="button">🛒 Add to Cart</button></td>
             </tr>
             <tr>
                 <td>&nbsp;</td>
-                <td align="right"><button type="button">Buy Now</button></td>
+                <td align="right"><button type="button">➤ Buy Now</button></td>
             </tr>
             <tr>
                 <td>
