--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -14,7 +14,7 @@
             <th><a href="/index.html"><img src="/images/gray-circle.png" width="48"></a></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
-            <th><a href="/html/cart.html">Cart</a></th>
+            <th nowrap><a href="/html/cart.html">🛒 Cart</a></th>
             <th><a href="/html/login.html">Login</a></th>
         </tr>
     </table>
