--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -126,7 +126,7 @@
             </tr>
             <tr>
                 <td align="right">
-                    <input type="submit" value="Checkout">
+                    <input type="submit" value="➤ Checkout">
                 </td>
             </tr>
         </table>
