Use relative references

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -11,11 +11,11 @@
 <body topmargin="20">
     <table>
         <tr>
-            <th><a href="/index.html"><img src="/images/gray-circle.png" width="48"></a></th>
+            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
-            <th nowrap><a href="/html/cart.html">🛒 Cart</a></th>
-            <th><a href="/html/login.html">Login</a></th>
+            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
+            <th><a href="./login.html">Login</a></th>
         </tr>
     </table>
     <br>
@@ -44,7 +44,7 @@
     <div>
         <table>
             <tr>
-                <td rowspan="6"><a href="/html/products/product1.html"><img src="/images/product1.png" width="256"></a></td>
+                <td rowspan="6"><a href="./products/product1.html"><img src="../images/product1.png" width="256"></a></td>
                 <td>Mask</td>
             </tr>
             <tr>
@@ -77,7 +77,7 @@
     <div>
         <table>
             <tr>
-                <td rowspan="6"><a href="/html/products/product2.html"><img src="/images/product2.png" width="256"></a></td>
+                <td rowspan="6"><a href="./products/product2.html"><img src="../images/product2.png" width="256"></a></td>
                 <td>Hand Sanitizer</td>
             </tr>
             <tr>
@@ -126,7 +126,9 @@
             </tr>
             <tr>
                 <td align="right">
-                    <input type="submit" value="➤ Checkout">
+                    <a href="./checkout.html">
+                        <input type="submit" value="➤ Checkout">
+                    </form>
                 </td>
             </tr>
         </table>
@@ -137,8 +139,8 @@
     <footer>
         <table>
             <tr>
-                <td><a href="/html/aboutus.html">About us</a></td>
-                <td><a href="/html/faq.html">FAQ's</a></td>
+                <td><a href="./aboutus.html">About us</a></td>
+                <td><a href="./faq.html">FAQ's</a></td>
             </tr>
             <tr>
                 <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
