--- a/storefront-site/html/user-preferences.html
+++ b/storefront-site/html/user-preferences.html
@@ -11,11 +11,11 @@
 <body topmargin="20">
     <table>
         <tr>
-            <th><a href="/index.html"><img src="/images/gray-circle.png" width="48"></a></th>
+            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
             <th nowrap>Company Name</th>
             <th width="100%"></th>
-            <th nowrap><a href="/html/cart.html">🛒 Cart</a></th>
-            <th><a href="/html/login.html">Login</a></th>
+            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
+            <th><a href="./login.html">Login</a></th>
         </tr>
     </table>
     <div>
@@ -56,8 +56,8 @@
     <footer>
         <table>
             <tr>
-                <td><a href="/html/aboutus.html">About us</a></td>
-                <td><a href="/html/faq.html">FAQ's</a></td>
+                <td><a href="./aboutus.html">About us</a></td>
+                <td><a href="./faq.html">FAQ's</a></td>
             </tr>
             <tr>
                 <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
