Add confirm button to user preferences

--- a/storefront-site/html/user-preferences.html
+++ b/storefront-site/html/user-preferences.html
@@ -47,6 +47,9 @@
                 <tr>
                     <td><input type="checkbox">Unsubscribe from promotional emails</td>
                 </tr>
+                <tr>
+                    <td align="right"><input type="submit" value="Confirm"></td>
+                </tr>
             </table>
         </form>
     </div>
