Do not redirect when adding to cart

--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -47,7 +47,7 @@
             <tr>
                 <td>Price: <font color="brown">$4.99</font>
                 </td>
-                <td align="right"><a href="../cart.html"><a href="../cart.html"><button type="button">🛒 Add to Cart</button></a></a></td>
+                <td align="right"><button type="button">🛒 Add to Cart</button></td>
             </tr>
             <tr>
                 <td>&nbsp;</td>
