added global headers

--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -8,7 +8,16 @@
     <title>Login</title>
 </head>
 
-<body>    
+<body>  
+    <table>
+        <tr>
+            <th><a href="./index.html"><img src="./images/gray-circle.png" width="48"></a></th>
+            <th nowrap>Company Name</th>
+            <th width="100%"></th>
+            <th nowrap><a href="./html/cart.html">🛒 Cart</a></th>
+            <th><a href="./html/login.html">Login</a></th>
+        </tr>
+    </table>  
     <h2>Login Page</h2><br>    
     <div class="login">    
     <form id="login" method="get" action="login.php">    
