--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -7,8 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
-
-
+<body>
+<table>
+    <tr>
+        <th><a href="./index.html"><img src="./images/gray-circle.png" width="48"></a></th>
+        <th nowrap>Company Name</th>
+        <th width="100%"></th>
+        <th nowrap><a href="./html/cart.html">🛒 Cart</a></th>
+        <th><a href="./html/login.html">Login</a></th>
+    </tr>
+</table>
 <form action="action_page.php>
     <div class="container">
       <h1>Sign Up</h1>
@@ -36,7 +44,7 @@
       </div>
     </div>
   </form>
-
+</body>
 <footer>
     <table>
         <tr>
