update index check and confimation

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -18,6 +18,39 @@
             <th><a href="./html/login.html">Login</a></th>
         </tr>
     </table>
+    
+    <table align = "center">
+        <tr>
+            <th><center><h1>Products</h1></center></th>
+            <br>
+            <br>
+        </tr>
+        <tr>
+            <th>
+                <form>                
+                    <select name="Filter">
+                        <OPTION VALUE=Default>Search/Filter
+                        <OPTION VALUE=Price>Price
+                        <OPTION VALUE=Rating>Rating
+                        </select>
+                </form>
+            </th>
+        </tr>
+        
+        <tr>
+            <th><a href="./html/products/product1.html"><img src="./images/product1.png" width="200"></a></th>
+            <th><a href="./html/products/product2.html"><img src="./images/product2.png" width="200"></a></th>
+            <th><a href="./html/products/product3.html"><img src="./images/product3.png" width="200"></a></th>
+        </tr>
+
+        <tr>
+            <th><a href="./html/products/product4.html"><img src="./images/product4.png" width="200"></a></th>
+            <th><a href="./html/products/product5.html"><img src="./images/product5.png" width="200"></a></th>
+        </tr>
+    </table>
+
+    <br>
+    <br>
     <footer>
         <table>
             <tr>
