Update company name text

--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -13,7 +13,7 @@
     <table>
         <tr>
             <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
-            <th nowrap>Company Name</th>
+            <th nowrap>Pandemic Essentials</th>
             <th width="100%"></th>
             <th nowrap><a href="./cart.html">🛒 Cart</a></th>
             <th><a href="./login.html">Login</a></th>
