--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -12,7 +12,7 @@
     <table>
         <tr>
             <th><a href="./index.html"><img src="./images/gray-circle.png" width="48"></a></th>
-            <th nowrap>Pandemic Supply</th>
+            <th nowrap>Pandemic Essentials</th>
             <th width="100%"></th>
             <th nowrap><a href="./html/cart.html">🛒 Cart</a></th>
             <th><a href="./html/login.html">Login</a></th>
