updates from meeting

--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -8,16 +8,16 @@
     <title>Login</title>
 </head>
 
-<body>  
+<body topmargin="20"> 
     <table>
         <tr>
-            <th><a href="./index.html"><img src="./images/gray-circle.png" width="48"></a></th>
-            <th nowrap>Company Name</th>
+            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
+            <th nowrap>Pandemic Essentials</th>
             <th width="100%"></th>
-            <th nowrap><a href="./html/cart.html">🛒 Cart</a></th>
-            <th><a href="./html/login.html">Login</a></th>
+            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
+            <th><a href="./login.html">Login</a></th>
         </tr>
-    </table>  
+    </table>
     <h2>Login Page</h2><br>    
     <div class="login">    
     <form id="login" method="get" action="login.php">    
@@ -31,12 +31,16 @@
         </label>    
         <input type="Password" name="Pass" id="Pass" placeholder="Password">    
         <br><br>    
-        <input type="button" name="log" id="log" value="Log In Here">       
+        <input type="button" name="log" id="log" value="Log In">       
         <br><br>    
         <input type="checkbox" id="check">    
         <span>Remember me</span>    
         <br><br>    
-        Forgot <a href="#">Password</a>    
+        <a href="#">Forgot Password</a>    
+        <br>
+        <br>
+        <td><a href="./register.html">Create an Account</a></td>
+        <br>
     </form>     
 </div>    
 </body>    
@@ -44,8 +48,8 @@
 <footer>
     <table>
         <tr>
-            <td><a href="../aboutus.html">About us</a></td>
-            <td><a href="../faq.html">FAQ's</a></td>
+            <td><a href="./aboutus.html">About us</a></td>
+            <td><a href="./faq.html">FAQ's</a></td>
         </tr>
         <tr>
             <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
