--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
-<body>
-<table>
-    <tr>
-        <th><a href="./index.html"><img src="./images/gray-circle.png" width="48"></a></th>
-        <th nowrap>Company Name</th>
-        <th width="100%"></th>
-        <th nowrap><a href="./html/cart.html">🛒 Cart</a></th>
-        <th><a href="./html/login.html">Login</a></th>
-    </tr>
-</table>
+<body topmargin="20"></body>
+    <table>
+        <tr>
+            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
+            <th nowrap>Pandemic Essentials</th>
+            <th width="100%"></th>
+            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
+            <th><a href="./login.html">Login</a></th>
+        </tr>
+    </table>
 <form action="action_page.php>
     <div class="container">
       <h1>Sign Up</h1>
@@ -25,17 +25,17 @@
   
       <label for="email"><b>Email</b></label>
       <input type="text" placeholder="Enter Email" name="email" required>
-  
+        <br>
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
-  
+        <br>
       <label for="psw-repeat"><b>Repeat Password</b></label>
       <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-  
+        <br>
       <label>
         <input type="checkbox" checked="checked" name="remember" > Remember me
       </label>
-  
+      <br>
       <p>By creating an account you agree to our <a href="#" >Terms & Privacy</a>.</p>
   
       <div class="clearfix">
@@ -48,8 +48,8 @@
 <footer>
     <table>
         <tr>
-            <td><a href="../aboutus.html">About us</a></td>
-            <td><a href="../faq.html">FAQ's</a></td>
+            <td><a href="./aboutus.html">About us</a></td>
+            <td><a href="./faq.html">FAQ's</a></td>
         </tr>
         <tr>
             <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
