placeholder for input

--- a/storefront-site/html/checkout.html
+++ b/storefront-site/html/checkout.html
@@ -130,12 +130,12 @@
                 <input type="text" id="fullName" name="fullName" value=""><br>
                 <label for="streetAddress">STREET ADDRESS</label><br>
                 <input type="text" id="streetAddress" name="streetAddress" value="">
-                <input type="text" id="Apt" name="Apt" value="Apt/Unit"><br>
+                <input type="text" id="Apt" name="Apt" placeholder="Apt/Unit"><br>
                 <label for="city">TOWN/CITY</label><br>
                 <input type="text" id="streetAddress" name="streetAddress" value=""><br>
                 <label for="state">STATE</label><br>
                 <input type="text" id="State" name="state" value="">                
-                <input type="text" id="Zip" name="Zip" value="Zip Code"><br>
+                <input type="text" id="Zip" name="Zip" placeholder="Zip Code"><br>
                 <br>
 
             
