--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -22,20 +22,18 @@
     <table align = "center">
         <tr>
             <th><center><h1>Products</h1></center></th>
-            <br>
-            <br>
-        </tr>
-        <tr>
+            <th> </th>
             <th>
                 <form>                
                     <select name="Filter">
-                        <OPTION VALUE=Default>Search/Filter
-                        <OPTION VALUE=Price>Price
-                        <OPTION VALUE=Rating>Rating
-                        </select>
+                    <OPTION VALUE=Default>Search/Filter
+                    <OPTION VALUE=Price>Price
+                    <OPTION VALUE=Rating>Rating
+                    </select>
                 </form>
             </th>
-        </tr>
+            <br>
+            <br>
         
         <tr>
             <th><a href="./html/products/product1.html"><img src="./images/product1.png" width="200"></a></th>
@@ -44,8 +42,18 @@
         </tr>
 
         <tr>
+            <th><a href="./html/products/product1.html">Mask</a></th>
+            <th><a href="./html/products/product2.html">Sanitizer</a></th>
+            <th><a href="./html/products/product3.html">Gloves</a></th>
+
+        </tr>
+        <tr>
             <th><a href="./html/products/product4.html"><img src="./images/product4.png" width="200"></a></th>
             <th><a href="./html/products/product5.html"><img src="./images/product5.png" width="200"></a></th>
+        </tr>
+        <tr>
+            <th><a href="./html/products/product4.html">Hotdog</a></th>
+            <th><a href="./html/products/product5.html">Soap</a></th>
         </tr>
     </table>
 
