meeting update pt2

--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -10,7 +10,7 @@
 <body>
 <table>
     <tr>
-        <th><a href="./index.html"><img src="./images/gray-circle.png" width="48"></a></th>
+        <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
         <th nowrap>Pandemic Essentials</th>
         <th width="100%"></th>
         <th nowrap><a href="./html/cart.html">🛒 Cart</a></th>
