--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -13,8 +13,8 @@
         <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
         <th nowrap>Pandemic Essentials</th>
         <th width="100%"></th>
-        <th nowrap><a href="./html/cart.html">🛒 Cart</a></th>
-        <th><a href="./html/login.html">Login</a></th>
+        <th nowrap><a href="./cart.html">🛒 Cart</a></th>
+        <th><a href="./login.html">Login</a></th>
     </tr>
 </table>
 <form action="action_page.php>
