Add user preferences link

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -16,6 +16,7 @@
             <th width="100%"></th>
             <th nowrap><a href="./html/cart.html">🛒 Cart</a></th>
             <th><a href="./html/login.html">Login</a></th>
+            <th><a href="./html/user-preferences.html">Preferences</a></th>
         </tr>
     </table>
     
