--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -16,6 +16,7 @@
             <th width="100%"></th>
             <th nowrap><a href="./cart.html">🛒 Cart</a></th>
             <th><a href="./login.html">Login</a></th>
+            <th><a href="./user-preferences.html">Preferences</a></th>
         </tr>
     </table>
     <br>
