--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -15,6 +15,7 @@
         <th width="100%"></th>
         <th nowrap><a href="./cart.html">🛒 Cart</a></th>
         <th><a href="./login.html">Login</a></th>
+            <th><a href="./user-preferences.html">Preferences</a></th>
     </tr>
 </table>
 <form action="action_page.php>
