--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -8,6 +8,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="./css/body.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/grid-product-listings.css">
 </head>
 
 <body>
@@ -27,50 +28,95 @@
         </nav>
     </header>
 
-    <table align="center">
-        <tr>
-            <th>
-                <center>
-                    <h1>Products</h1>
-                </center>
-            </th>
-            <th> </th>
-            <th>
-                <form>
-                    <select name="Filter">
-                        <OPTION VALUE=Default>Search/Filter
-                        <OPTION VALUE=Price>Price
-                        <OPTION VALUE=Rating>Rating
-                    </select>
-                </form>
-            </th>
-            <br>
-            <br>
-
-        <tr>
-            <th><a href="./html/products/product1.html"><img src="./images/product1.png" width="200"></a></th>
-            <th><a href="./html/products/product2.html"><img src="./images/product2.png" width="200"></a></th>
-            <th><a href="./html/products/product3.html"><img src="./images/product3.png" width="200"></a></th>
-        </tr>
-
-        <tr>
-            <th><a href="./html/products/product1.html">Mask</a></th>
-            <th><a href="./html/products/product2.html">Sanitizer</a></th>
-            <th><a href="./html/products/product3.html">Gloves</a></th>
-
-        </tr>
-        <tr>
-            <th><a href="./html/products/product4.html"><img src="./images/product4.png" width="200"></a></th>
-            <th><a href="./html/products/product5.html"><img src="./images/product5.png" width="200"></a></th>
-        </tr>
-        <tr>
-            <th><a href="./html/products/product4.html">Hotdog</a></th>
-            <th><a href="./html/products/product5.html">Soap</a></th>
-        </tr>
-    </table>
+    <div class="outer-grid-product-listings">
+        <h2>Browse our selection of items</h2>
+        <div class="inner-grid-product-listings">
+            <a href="./html/products/product1.html">
+                <div class="product-listing">
+                    <img src="./images/product1.png">
+                </div>
+            </a>
+            <a href="./html/products/product2.html">
+                <div class="product-listing">
+                    <img src="./images/product2.png">
+                </div>
+            </a>
+            <a href="./html/products/product3.html">
+                <div class="product-listing">
+                    <img src="./images/product3.png">
+                </div>
+            </a>
+            <a href="./html/products/product4.html">
+                <div class="product-listing">
+                    <img src="./images/product4.png">
+                </div>
+            </a>
+            <a href="./html/products/product5.html">
+                <div class="product-listing">
+                    <img src="./images/product5.png">
+                </div>
+            </a>
+            <a href="./html/products/product6.html">
+                <div class="product-listing">
+                    <img src="./images/product6.png">
+                </div>
+            </a>
+            <a href="./html/products/product7.html">
+                <div class="product-listing">
+                    <img src="./images/product7.png">
+                </div>
+            </a>
+            <a href="./html/products/product8.html">
+                <div class="product-listing">
+                    <img src="./images/product8.png">
+                </div>
+            </a>
+            <a href="./html/products/product9.html">
+                <div class="product-listing">
+                    <img src="./images/product9.png">
+                </div>
+            </a>
+            <a href="./html/products/product10.html">
+                <div class="product-listing">
+                    <img src="./images/product10.png">
+                </div>
+            </a>
+            <a href="./html/products/product11.html">
+                <div class="product-listing">
+                    <img src="./images/product11.png">
+                </div>
+            </a>
+            <a href="./html/products/product12.html">
+                <div class="product-listing">
+                    <img src="./images/product12.png">
+                </div>
+            </a>
+            <a href="./html/products/product13.html">
+                <div class="product-listing">
+                    <img src="./images/product13.png">
+                </div>
+            </a>
+            <a href="./html/products/product14.html">
+                <div class="product-listing">
+                    <img src="./images/product14.png">
+                </div>
+            </a>
+            <a href="./html/products/product15.html">
+                <div class="product-listing">
+                    <img src="./images/product15.png">
+                </div>
+            </a>
+            <a href="./html/products/product16.html">
+                <div class="product-listing">
+                    <img src="./images/product16.png">
+                </div>
+            </a>
+        </div>
+    </div>
 
     <br>
     <br>
+
     <footer>
         <table>
             <tr>
