Add new footer on homepage

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -116,15 +116,42 @@
     </div>
 
     <footer>
-        <table>
-            <tr>
-                <td><a href="./html/aboutus.html">About us</a></td>
-                <td><a href="./html/faq.html">FAQ's</a></td>
-            </tr>
-            <tr>
-                <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
-            </tr>
-        </table>
+        <div class="footer-nav-container">
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Information</b>
+                <a href="./html/aboutus.html" class="footer-nav-content">About Us</a>
+                <a href="./html/aboutus.html" class="footer-nav-content">Locations & Hours</a>
+                <a href="./html/aboutus.html" class="footer-nav-content">Terms of Service</a>
+                <a href="./html/aboutus.html" class="footer-nav-content">Privacy Policy</a>
+            </nav>
+            <div class="footer-nav-spacer"></div>
+            <nav class="footer-nav">
+                <b class="footer-nav-header" class="footer-nav-content">Services</b>
+                <a href="./html/faq.html" class="footer-nav-content">FAQ</a>
+                <a href="./html/aboutus.html" class="footer-nav-content">Returns</a>
+                <a href="./html/aboutus.html" class="footer-nav-content">Shipping</a>
+            </nav>
+            <div class="footer-nav-spacer"></div>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Contact Us</b>
+                <span class="footer-nav-content">By Phone (Mon-Fri 9am-5pm):</span>
+                <span class="footer-nav-content">+1 (555) 123-4567</span>
+                <span class="footer-nav-content">By Email:</span>
+                <span class="footer-nav-content">pandemic-essentials@example.com</span>
+            </nav>
+            <div class="footer-nav-spacer"></div>
+            <nav class="footer-nav">
+                <b class="footer-nav-header">Newsletter</b>
+                <a href="./html/faq.html" class="footer-nav-content">Subscribe</a>
+                <a href="./html/faq.html" class="footer-nav-content">Unsubscribe</a>
+            </nav>
+        </div>
+        <hr>
+        <nav class="footer-logo-container">
+            <a href="./index.html">
+                <img src="./images/logo-transparent.png" class="logo">
+            </a>
+        </nav>
     </footer>
 </body>
 
