--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -28,7 +28,7 @@
             <a href="./html/login.html" class="header-nav-link">Login</a>
         </nav>
     </header>
-
+    <hr style="margin: auto; padding: 0; height: 24px; border: 0; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <div class="outer-grid-product-listings">
         <h2>Browse our selection of items</h2>
         <div class="inner-grid-product-listings">
