--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -119,16 +119,16 @@
         <div class="footer-nav-container">
             <nav class="footer-nav">
                 <b class="footer-nav-header">Information</b>
-                <a href="./html/aboutus.html" class="footer-nav-content">About Us</a>
-                <a href="./html/aboutus.html" class="footer-nav-content">Locations & Hours</a>
-                <a href="./html/aboutus.html" class="footer-nav-content">Terms of Service</a>
-                <a href="./html/aboutus.html" class="footer-nav-content">Privacy Policy</a>
+                <a class="footer-nav-content" href="./html/aboutus.html">About Us</a>
+                <a class="footer-nav-content" href="./html/aboutus.html">Locations & Hours</a>
+                <a class="footer-nav-content" href="./html/aboutus.html">Terms of Service</a>
+                <a class="footer-nav-content" href="./html/aboutus.html">Privacy Policy</a>
             </nav>
             <nav class="footer-nav">
-                <b class="footer-nav-header" class="footer-nav-content">Services</b>
-                <a href="./html/faq.html" class="footer-nav-content">FAQ</a>
-                <a href="./html/aboutus.html" class="footer-nav-content">Returns</a>
-                <a href="./html/aboutus.html" class="footer-nav-content">Shipping</a>
+                <b class="footer-nav-header">Services</b>
+                <a class="footer-nav-content" href="./html/faq.html">FAQ</a>
+                <a class="footer-nav-content" href="./html/aboutus.html">Returns</a>
+                <a class="footer-nav-content" href="./html/aboutus.html">Shipping</a>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Contact Us</b>
@@ -139,8 +139,8 @@
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Newsletter</b>
-                <a href="./html/faq.html" class="footer-nav-content">Subscribe</a>
-                <a href="./html/faq.html" class="footer-nav-content">Unsubscribe</a>
+                <a class="footer-nav-content" href="./html/faq.html">Subscribe</a>
+                <a class="footer-nav-content" href="./html/faq.html">Unsubscribe</a>
             </nav>
         </div>
         <hr>
