Add featured bar on homepage

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -8,6 +8,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="./styles/body.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/grid-featured-products.css">
     <link rel="stylesheet" href="./styles/grid-product-listings.css">
     <link rel="stylesheet" href="./styles/footer.css">
 </head>
@@ -29,8 +30,54 @@
         </nav>
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <div class="featured-products-container">
+        <div class="featured-product-container">
+            <div class="featured-product-content">
+                <h2>Currently Popular</h2>
+                <a href="./html/products/product1.html">
+                    <div class="featured-product">
+                        <img src="./images/product1.png">
+                    </div>
+                </a>
+                <span><a href="./html/products/product1.html">See More</a></span>
+            </div>
+        </div>
+        <div class="featured-product-container">
+            <div class="featured-product-content">
+                <h2>On Sale</h2>
+                <a href="./html/products/product12.html">
+                    <div class="featured-product">
+                        <img src="./images/product12.png">
+                    </div>
+                </a>
+                <span><a href="./html/sales.html">View Other Sales</a></span>
+            </div>
+        </div>
+        <div class="featured-product-container">
+            <div class="featured-product-content">
+                <h2>Highest Rating</h2>
+                <a href="./html/products/product14.html">
+                    <div class="featured-product">
+                        <img src="./images/product14.png">
+                    </div>
+                </a>
+                <span><a href="./html/products/product14.html">See More</a></span>
+            </div>
+        </div>
+        <div class="featured-product-container">
+            <div class="featured-product-content">
+                <h2>Supplies Under $20</h2>
+                <a href="./html/products/product8.html">
+                    <div class="featured-product">
+                        <img src="./images/product8.png">
+                    </div>
+                </a>
+                <span><a href="./html/products/product8.html">Shop Supplies</a></span>
+            </div>
+        </div>
+    </div>
     <div class="outer-grid-product-listings">
-        <h2>Browse our selection of items</h2>
+        <h2>Browse our full selection of products</h2>
         <div class="inner-grid-product-listings">
             <a href="./html/products/product1.html">
                 <div class="product-listing">
