--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -8,6 +8,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="./styles/body.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/homepage-banner.css">
     <link rel="stylesheet" href="./styles/grid-featured-products.css">
     <link rel="stylesheet" href="./styles/grid-product-listings.css">
     <link rel="stylesheet" href="./styles/footer.css">
@@ -30,6 +31,11 @@
         </nav>
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <div class="homepage-banner-container">
+        <div class="homepage-banner">
+            <img src="images/banner-text.png">
+        </div>
+    </div>
     <div class="featured-products-container">
         <div class="featured-product-container">
             <div class="featured-product-content">
