Reverse homepage background color scheme

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="./styles/body.css">
+    <link rel="stylesheet" href="./styles/homepage.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/homepage-banner.css">
     <link rel="stylesheet" href="./styles/grid-featured-products.css">
