--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -28,7 +28,18 @@
         <nav class="header-nav">
             <a href="./html/cart.html" class="header-nav-link">🛒 Cart</a>
             <a href="./html/user-preferences.html" class="header-nav-link">⚙️ Preferences</a>
-            <a href="./html/login.html" class="header-nav-link">Login</a>
+            <div class="header-login-dropdown">
+                <a href="./html/login.html" class="header-nav-link">Sign In ▼</a>
+                <nav class="header-login-dropdown-content">
+                    <div>
+                        <div class="header-login-dropdown-flex">
+                            <a href="./html/login.html">Sign In</a>
+                            <a href="./html/register.html">Register</a>
+                            <a href="./index.html">Log Out</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </nav>
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
