Change featured product

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -85,9 +85,9 @@
         <div class="featured-product-container">
             <div class="featured-product-content">
                 <h2>Supplies Under $20</h2>
-                <a href="./html/products/product8.html">
+                <a href="./html/products/product16.html">
                     <div class="featured-product">
-                        <img src="./images/product8.png">
+                        <img src="./images/product16.png">
                     </div>
                 </a>
                 <span><a href="./html/products/product8.html">Shop Supplies</a></span>
