--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -6,54 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="../styles/body.css">
+    <link rel="stylesheet" href="../styles/register.css">
 </head>
+
 <body>
-<table>
-    <tr>
-        <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
-        <th nowrap>Pandemic Essentials</th>
-        <th width="100%"></th>
-        <th nowrap><a href="./cart.html">🛒 Cart</a></th>
-        <th><a href="./login.html">Login</a></th>
-            <th><a href="./user-preferences.html">Preferences</a></th>
-    </tr>
-</table>
-<form action="action_page.php>
-    <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr>
-  
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
-        <br>
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-        <br>
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-        <br>
-      <label>
-        <input type="checkbox" checked="checked" name="remember" > Remember me
-      </label>
-      <br>
-      <p>By creating an account you agree to our <a href="#" >Terms & Privacy</a>.</p>
-  
-      <div class="clearfix">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
-      </div>
+    <div class="register-outer-container">
+        <a href="../index.html" class="logo">
+            <img src="../images/logo-black.png" class="logo">
+        </a>
+        <form class="register-form">
+            <h2>Create Account</h2>
+            <label for="name"><b>Your name</b></label>
+            <br>
+            <input type="text" name="name" required>
+            <br>
+            <div class="form-spacer"></div>
+            <label for="email"><b>Email</b></label>
+            <br>
+            <input type="email" name="email" required>
+            <br>
+            <div class="form-spacer"></div>
+            <label for="password"><b>Password</b></label>
+            <br>
+            <input type="password" placeholder="At least 6 characters" name="password" required>
+            <br>
+            <div id="password-requirement">
+                <img src="../images/exclam.png"> Passwords must be at least 6 characters.
+            </div>
+            <br>
+            <label for="password-repeat"><b>Re-enter password</b></label>
+            <br>
+            <input type="password" name="password-repeat" required>
+            <br>
+            <div class="form-spacer"></div>
+            <button type="submit" class="create-account-button">Create your account</button>
+            <br>
+            <span id="disclaimer">By creating an account, you agree to our <a href="./tos.html">Terms of Service</a> and <a href="./privacy-policy.html">Privacy Policy</a>.</span>
+            <hr>
+            <span id="already-registered">Already have an account? <a href="./login.html">Sign In</a></span>
+        </form>
     </div>
-  </form>
+    <footer id="footer">
+        <hr>
+        <div class="register-footer-container">
+            <div class="register-footer-content">
+                <nav>
+                    <a href="./tos.html">Terms of Service</a>
+                    <a href="./privacy-policy.html">Privacy Policy</a>
+                    <a href="./faq.html">Help</a>
+                </nav>
+                <span>
+                    © 2021, PandemicEssentials.com or its affiliates
+                </span>
+            </div>
+        </div>
+    </footer>
 </body>
-<footer>
-    <table>
-        <tr>
-            <td><a href="./aboutus.html">About us</a></td>
-            <td><a href="./faq.html">FAQ's</a></td>
-        </tr>
-        <tr>
-            <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
-        </tr>
-    </table>
-</footer>
+
+</html>
