Move mini footer styles to separate file

--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -8,6 +8,7 @@
     <title>Register</title>
     <link rel="stylesheet" href="../styles/body.css">
     <link rel="stylesheet" href="../styles/register.css">
+    <link rel="stylesheet" href="../styles/mini-footer.css">
 </head>
 
 <body>
@@ -49,8 +50,8 @@
     </div>
     <footer id="footer">
         <hr>
-        <div class="register-footer-container">
-            <div class="register-footer-content">
+        <div class="mini-footer-container">
+            <div class="mini-footer-content">
                 <nav>
                     <a href="./tos.html">Terms of Service</a>
                     <a href="./privacy-policy.html">Privacy Policy</a>
