Fix "Need Help" link

--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -33,7 +33,7 @@
             <span id="disclaimer">By continuing, you agree to our <a href="./tos.html">Terms of Service</a> and <a href="./privacy-policy.html">Privacy Policy</a>.</span>
             <br>
             <div class="form-spacer"></div>
-            <a href="./login.html" id="need-help">Need help?</a>
+            <a href="./faq.html" id="need-help">Need help?</a>
         </form>
         <div class="create-account-container">
             <span>New to PandemicEssentials?</span>
