Change phone number and email in footer to links

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -198,9 +198,9 @@
             <nav class="footer-nav">
                 <b class="footer-nav-header">Contact Us</b>
                 <span class="footer-nav-content">By Phone (Mon-Fri 9am-5pm):</span>
-                <span class="footer-nav-content">+1 (555) 123-4567</span>
+                <span class="footer-nav-content"><a href="tel:+1555-123-4567">+1 (555) 123-4567</a></span>
                 <span class="footer-nav-content">By Email:</span>
-                <span class="footer-nav-content">pandemic-essentials@example.com</span>
+                <span class="footer-nav-content"><a href="mailto:pandemic-essentials@example.com">pandemic-essentials@example.com</a></span>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Newsletter</b>
