--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -84,13 +84,13 @@
         </div>
         <div class="featured-product-container">
             <div class="featured-product-content">
-                <h2>Supplies Under $20</h2>
+                <h2>Under $20</h2>
                 <a href="./html/products/product16.html">
                     <div class="featured-product">
                         <img src="./images/product16.png">
                     </div>
                 </a>
-                <span><a href="./html/products/product8.html">Shop Supplies</a></span>
+                <span><a href="./html/products/product8.html">Shop Under $20</a></span>
             </div>
         </div>
     </div>
