Use copyright entity

--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -52,7 +52,7 @@
                     <a href="./faq.html">Help</a>
                 </nav>
                 <span>
-                    © 2021, PandemicEssentials.com or its affiliates
+                    &copy; 2021, PandemicEssentials.com or its affiliates
                 </span>
             </div>
         </div>
