--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -58,7 +58,7 @@
                     <a href="./faq.html">Help</a>
                 </nav>
                 <span>
-                    © 2021, PandemicEssentials.com or its affiliates
+                    &copy; 2021, PandemicEssentials.com or its affiliates
                 </span>
             </div>
         </div>
