Change search field type

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -23,7 +23,7 @@
             </a>
         </div>
         <form class="search-form">
-            <input type="text" class="search-field" autocomplete="off" placeholder="Search...">
+            <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
         </form>
         <nav class="header-nav">
             <a href="./html/cart.html" class="header-nav-link">🛒 Cart</a>
