Autofocus for login and register

--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -20,7 +20,7 @@
             <h2>Create Account</h2>
             <label for="name"><b>Your name</b></label>
             <br>
-            <input type="text" name="name" required>
+            <input type="text" name="name" required autofocus>
             <br>
             <div class="form-spacer"></div>
             <label for="email"><b>Email</b></label>
