--- a/storefront-site/html/login.html
+++ b/storefront-site/html/login.html
@@ -20,7 +20,7 @@
             <h2>Sign-In</h2>
             <label for="email"><b>Email</b></label>
             <br>
-            <input type="email" name="email" required>
+            <input type="email" name="email" required autofocus>
             <br>
             <div class="form-spacer"></div>
             <label for="password"><b>Password</b></label>
