Use Google material-icons

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -8,6 +8,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/homepage.css">
+    <link rel="stylesheet" href="./styles/google-material-icons.css" >
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/homepage-banner.css">
     <link rel="stylesheet" href="./styles/grid-featured-products.css">
@@ -26,8 +27,8 @@
             <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
         </form>
         <nav class="header-nav">
-            <a href="./html/cart.html" class="header-nav-link">🛒 Cart</a>
-            <a href="./html/user-preferences.html" class="header-nav-link">⚙️ Preferences</a>
+            <a href="./html/cart.html" class="header-nav-link"><span class="material-icons">&#xe8cc;</span> Cart</a>
+            <a href="./html/user-preferences.html" class="header-nav-link"><span class="material-icons">&#xe8b8;</span> Preferences</a>
             <div class="header-login-dropdown">
                 <a href="./html/login.html" class="header-nav-link">Sign In ▼</a>
                 <nav class="header-login-dropdown-content">
