Use Google material-icon instead of picture

--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/google-material-icons.css">
     <link rel="stylesheet" href="../styles/register.css">
     <link rel="stylesheet" href="../styles/mini-footer.css">
 </head>
@@ -33,7 +34,7 @@
             <input type="password" placeholder="At least 6 characters" name="password" required>
             <br>
             <div id="password-requirement">
-                <img src="../images/exclam.png"> Passwords must be at least 6 characters.
+                <span class="material-icons" style="font-size: 16px;">&#xe88e;</span> Passwords must be at least 6 characters.
             </div>
             <br>
             <label for="password-repeat"><b>Re-enter password</b></label>
