Use readable material-icon references

--- a/storefront-site/html/register.html
+++ b/storefront-site/html/register.html
@@ -34,7 +34,7 @@
             <input type="password" placeholder="At least 6 characters" name="password" required>
             <br>
             <div id="password-requirement">
-                <span class="material-icons" style="font-size: 16px;">&#xe88e;</span> Passwords must be at least 6 characters.
+                <span class="material-icons" style="font-size: 16px;">info</span> Passwords must be at least 6 characters.
             </div>
             <br>
             <label for="password-repeat"><b>Re-enter password</b></label>
