--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -27,8 +27,8 @@
             <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
         </form>
         <nav class="header-nav">
-            <a href="./html/cart.html" class="header-nav-link"><span class="material-icons">&#xe8cc;</span> Cart</a>
-            <a href="./html/user-preferences.html" class="header-nav-link"><span class="material-icons">&#xe8b8;</span> Preferences</a>
+            <a href="./html/cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+            <a href="./html/user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span> Preferences</a>
             <div class="header-login-dropdown">
                 <a href="./html/login.html" class="header-nav-link">Sign In ▼</a>
                 <nav class="header-login-dropdown-content">
